--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <section class="section-episodios">
             <div class="gradient">
               <div class="episodios">
-                <a class="link-episodios" href="#">Episodios</a> 
+                 <h2><a class="link-episodios" href="https://www.spotify.com/">Episodios</a></h2>
               </div>
               <div class="cont-spot">
                 <div class="spot1">
