--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/70745d5714.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -69,26 +70,22 @@
             <div class="cont-spot">
                 <div>
                     <iframe class="spotify-link"
-                        src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
-                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media">
+                        src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt">
                     </iframe>
                 </div>
                 <div>
                     <iframe class="spotify-link"
-                        src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%"
-                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media">
+                        src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD">
                     </iframe>
                 </div>
                 <div>
                     <iframe class="spotify-link"
-                        src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" width="100%"
-                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media">
+                        src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ">
                     </iframe>
                 </div>
                 <div>
                     <iframe class="spotify-link"
-                        src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" width="100%"
-                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media">
+                        src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt">
                     </iframe>
                 </div>
             </div>
@@ -126,7 +123,7 @@
             </div>
             <div class="cont">
                 <div class="cont-img">
-                    <img class="img" src="./assets/An _E.R.A.Univac.png" alt="an-era-computer">
+                    <img class="img" src="./assets/An_ERA_Univac.png" alt="an-era-computer">
                 </div>
                 <div class="cont-img">
                     <img class="img" src="./assets/Computer-operators.png" alt="computer-operators">
@@ -182,16 +179,16 @@
             <p>© 2019— Hello blue pale dot</p>
         </div>
         <div class="cont-iconos">
-            <a class="icono" href="https://www.spotify.com/"><img class="img-footer" src="./img/spotify-brands.svg"
-                    alt="logo-spotify"></a>
-            <a class="icono" href="https://www.instagram.com/"><img class="img-footer" src="./img/instagram-brands.svg"
-                    alt="logo-intagram"></a>
-            <a class="icono" href="https://twitter.com/"><img class="img-footer" src="./img/twitter-brands.svg"
-                    alt="logo-twitter"></a>
-            <a class="icono" href="https://www.facebook.com/"><img class="img-footer" src="./img/facebook-brands.svg"
-                    alt="logo-facebook"></a>
-            <a class="icono" href="https://web.telegram.org/"><img class="img-footer" src="./img/telegram-brands.svg"
-                    alt="logo-telegram"></a>
+            <a class="icono-footer" href="https://www.spotify.com/ar/" target="blank"><i style="color: #060A24;"
+                class="fab fa-spotify"></i></a>
+            <a class="icono-footer" href="https://www.instagram.com/?hl=es-la" target="blank"><i style="color: #060A24;"
+                class="fab fa-instagram"></i></a>
+            <a class="icono-footer" href="https://twitter.com/?lang=es" target="blank"><i style="color: #060A24;"
+                class="fab fa-twitter"></i></a>
+            <a class="icono-footer" href="https://www.facebook.com/" target="blank"><i style="color: #060A24;"
+                class="fab fa-facebook"></i></a>
+            <a class="icono-footer" href="https://web.telegram.org/" target="blank"><i style="color: #060A24;"
+                class="fab fa-telegram"></i></a>
         </div>
     </footer>
 
